--- a/form-element.html
+++ b/form-element.html
@@ -170,17 +170,17 @@
         <div class="quixnav">
             <div class="quixnav-scroll">
                 <ul class="metismenu" id="menu">
-                    <li class="nav-label first">Main Menu</li>
+                    <!-- <li class="nav-label first">Main Menu</li> -->
                     <!-- <li><a href="index.html"><i class="icon icon-single-04"></i><span class="nav-text">Dashboard</span></a>
                     </li> -->
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                                 class="icon icon-single-04"></i><span class="nav-text">Dashboard</span></a>
                         <ul aria-expanded="false">
-                            <li><a href="./index.html">Dashboard 1</a></li>
-                            <li><a href="./index2.html">Dashboard 2</a></li></ul>
+                            <li><a href="./index.html">Dashboard</a></li>
+                            <!-- <li><a href="./index2.html">Dashboard 2</a></li></ul> -->
                     </li>
                     
-                    <li class="nav-label">Apps</li>
+                    <!-- <li class="nav-label">Apps</li>
                     <li><a class="has-arrow" href="javascript:void()" aria-expanded="false"><i
                                 class="icon icon-app-store"></i><span class="nav-text">Apps</span></a>
                         <ul aria-expanded="false">
@@ -281,7 +281,7 @@
                             </li>
                             <li><a href="./page-lock-screen.html">Lock Screen</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -294,7 +294,7 @@
         ***********************************-->
         <div class="content-body">
             <div class="container-fluid">
-                <div class="row page-titles mx-0">
+                <!-- <div class="row page-titles mx-0">
                     <div class="col-sm-6 p-md-0">
                         <div class="welcome-text">
                             <h4>Hi, welcome back!</h4>
@@ -307,11 +307,11 @@
                             <li class="breadcrumb-item active"><a href="javascript:void(0)">Element</a></li>
                         </ol>
                     </div>
-                </div>
+                </div> -->
                 <!-- row -->
                 <div class="row">
                     <div class="col-xl-6 col-xxl-12">
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Input Style</h4>
                             </div>
@@ -477,24 +477,47 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Vertical Form</h4>
                             </div>
                             <div class="card-body">
-                                <div class="basic-form">
-                                    <form>
+                                    <form action="php/add_doner.php" method="get">
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">Email</label>
+                                            <label class="col-sm-2 col-form-label">Full Name</label>
                                             <div class="col-sm-10">
-                                                <input type="email" class="form-control" placeholder="Email">
+                                                <input type="text" class="form-control" name="name"placeholder="Full Name">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">Password</label>
+                                            <label class="col-sm-2 col-form-label"> Mobile</label>
                                             <div class="col-sm-10">
-                                                <input type="password" class="form-control" placeholder="Password">
+                                                <input type="text" class="form-control" name="mobile"placeholder="Mobile">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label"> Address</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" name="address"placeholder="Address">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">Any Health Problem</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" name="health_issue"placeholder="Address">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">Email</label>
+                                            <div class="col-sm-10">
+                                                <input type="email" class="form-control" name="email"placeholder="Email">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">Aadhar</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" name="aadhar"placeholder="Aadhar no">
                                             </div>
                                         </div>
                                         <fieldset class="form-group">
@@ -502,47 +525,65 @@
                                                 <label class="col-form-label col-sm-2 pt-0">Radios</label>
                                                 <div class="col-sm-10">
                                                     <div class="form-check">
-                                                        <input class="form-check-input" type="radio" name="gridRadios" value="option1" checked>
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="a">
                                                         <label class="form-check-label">
-                                                            First radio
+                                                            A+
                                                         </label>
                                                     </div>
                                                     <div class="form-check">
-                                                        <input class="form-check-input" type="radio" name="gridRadios" value="option2">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="a-">
                                                         <label class="form-check-label">
-                                                            Second radio
+                                                            A-
                                                         </label>
                                                     </div>
-                                                    <div class="form-check disabled">
-                                                        <input class="form-check-input" type="radio" name="gridRadios" value="option3" disabled>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="a-">
                                                         <label class="form-check-label">
-                                                            Third disabled radio
+                                                            B+
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="b-">
+                                                        <label class="form-check-label">
+                                                            B-
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="ab-">
+                                                        <label class="form-check-label">
+                                                            AB+
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="ab-">
+                                                        <label class="form-check-label">
+                                                            AB-
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="o">
+                                                        <label class="form-check-label">
+                                                            o+
+                                                        </label>
+                                                    </div>
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="radio" name="blood_group" value="o-">
+                                                        <label class="form-check-label">
+                                                            o-
                                                         </label>
                                                     </div>
                                                 </div>
                                             </div>
                                         </fieldset>
                                         <div class="form-group row">
-                                            <div class="col-sm-2">Checkbox</div>
                                             <div class="col-sm-10">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox">
-                                                    <label class="form-check-label">
-                                                        Example checkbox
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <div class="col-sm-10">
-                                                <button type="submit" class="btn btn-primary">Sign in</button>
+                                                <button class="btn btn-primary">Add</button>
                                             </div>
                                         </div>
                                     </form>
-                                </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Checkboxes</h4>
                             </div>
@@ -1248,7 +1289,7 @@
                                     </form>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
